--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -42,8 +43,7 @@
       "last 1 safari version"
     ]
   },
-    "devDependencies":{
-      "gh-pages": "^2.0.1"
-    }
-  
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
